Fix missing margin in sidebar

--- a/assets/sass/components/profileMenu.scss
+++ b/assets/sass/components/profileMenu.scss
@@ -1,5 +1,6 @@
 .profile-menu {
   margin: 0 0 calc($space * 3) calc($space / 2);
+  display: block;
 
   .avatar,
   .avatar:hover {
